// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVault - withdraw claim exited assets for single user in multiple checkpoints in multiple transactions 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 76993,
}
`;

exports[`EthVault - withdraw claim exited assets for single user in multiple checkpoints in multiple transactions 2`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 54427,
}
`;

exports[`EthVault - withdraw claim exited assets for single user in multiple checkpoints in single transaction 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 57053,
}
`;

exports[`EthVault - withdraw claim exited assets for single user in single checkpoint 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 54427,
}
`;

exports[`EthVault - withdraw enter exit queue locks tokens for the time of exit 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 74946,
}
`;

exports[`EthVault - withdraw enter exit queue reduces allowance for sender other than owner 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 75610,
}
`;

exports[`EthVault - withdraw get checkpoint index works with many checkpoints 1`] = `30161`;

exports[`EthVault - withdraw redeem & withdraw redeem transfers assets to receiver 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 61413,
}
`;

exports[`EthVault - withdraw redeem & withdraw reduces allowance for sender other than owner 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 63422,
}
`;

exports[`EthVault - withdraw redeem & withdraw withdraw transfers assets to receiver 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 61452,
}
`;

exports[`EthVault - withdraw update exit queue adds checkpoint 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 95812,
}
`;

exports[`EthVault - withdraw update exit queue for not all the queued shares 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 100608,
}
`;
